<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_todo_title">Add Todo Title</string>
    <string name="enter_your_todo_title_her">Enter Your Todo Title Her ...</string>
    <string name="enter_your_descripion_her">Enter Your Descripion Her ...</string>
    <string name="select_time">Select Time :</string>
    <string name="_10_2" translatable="false">10/2/2024</string>
    <string name="add">Add</string>
    <string name="title_required">Title Required</string>
    <string name="description_required">Description Required</string>
    <string-array name="language">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode">
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
</resources>