<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".taps.AddTodoBottomSheetFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:layout_marginHorizontal="12dp">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_todo_title_her"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_v2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_v1"
        android:layout_marginHorizontal="12dp">

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_descripion_her"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="12dp"
            android:maxLines="5"
            android:minLines="5"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/text_input_v1"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/select_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="14dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_v2"/>

    <TextView
        android:id="@+id/select_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_10_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_time_tv" />

    <Button
        android:id="@+id/btn_add_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginVertical="28dp"
        app:layout_constraintTop_toBottomOf="@id/select_time_value" />


</androidx.constraintlayout.widget.ConstraintLayout>